# ffmpeg-quality-metrics

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPERS.md  Dockerfile  Dockerfile-legacy  HISTORY.md  LICENSE.md  README.md  docker_run.sh  ffmpeg_quality_metrics.py  pyproject.toml  release.sh  requirements.txt  setup.cfg  setup.py  variable_segdurs_helper.py
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-push.yml  python-package.yml
docs/: ffmpeg_quality_metrics.html  index.html  search.js  src.html
docs/ffmpeg_quality_metrics/: __main__.html  ffmpeg_quality_metrics.html  utils.html
docs/src/: ffmpeg_quality_metrics.html
ffmpeg_quality_metrics/: __init__.py  __main__.py  ffmpeg_quality_metrics.py  log.py  utils.py
src/ffmpeg_quality_metrics/: __init__.py  __main__.py  ffmpeg_quality_metrics.py  gui.py  gui_main.py  log.py  utils.py
test/: dist-854x480.mkv  example.json  ref-1280x720.mkv  response.json  test.py  test_metrics.py  test_output.py
tests/: response.json  test_metrics.py  test_output.py
